--- a/src/templates/layout/header.html
+++ b/src/templates/layout/header.html
@@ -34,8 +34,8 @@
 					</li>
 				</ul>
 			</div>
-			<div class="d-flex justify-content-center">
-				<button type="button" class="btn btn-warning me-1 header__button">Оставить заявку</button>
+			<div class="d-flex justify-content-center header__button_block">
+				<button type="button" class="btn btn-warning header__button">Оставить заявку</button>
 			</div>
 		</div>
 	</div>
