--- a/src/templates/sections/home/prospects/index.html
+++ b/src/templates/sections/home/prospects/index.html
@@ -1,1 +1,4 @@
-<section class="prospects"></section>
+<section class="prospects">
+	@@include('../../../elements/title.html', {className: 'prospects__prospects_title'})
+	<div class="content prospects__content"></div>
+</section>
