--- a/src/sass/elements/_section-title.scss
+++ b/src/sass/elements/_section-title.scss
@@ -1,18 +1,20 @@
 .section-title {
-  text-align: center;
-  h1 {
-    position: relative;
-    font-size: 2.2rem;
-    text-transform: uppercase;
-    &::after {
-      content: "";
-      position: absolute;
-      border-bottom: 2px solid #e58d35;
-      width: 8%;
-      bottom: -11px;
-      left: 45%;
-      right: 45%;
-      margin: auto;
-    }
-  }
+	width: 100%;
+	text-align: center;
+
+	h1 {
+		position: relative;
+		font-size: 2.2rem;
+		text-transform: uppercase;
+		&::after {
+			content: '';
+			position: absolute;
+			border-bottom: 2px solid #e58d35;
+			width: 8%;
+			bottom: -20px;
+			left: 45%;
+			right: 45%;
+			margin: auto;
+		}
+	}
 }
