--- a/src/sass/sections/home/prospects/_prospects.scss
+++ b/src/sass/sections/home/prospects/_prospects.scss
@@ -1,10 +1,18 @@
 .prospects {
 	background-color: $colorGray;
 	width: 95%;
-	margin: 5% auto 0px;
+	margin: 4.5% auto 0px;
 	border-radius: 18px;
 	padding: 3% 16% 3% 18%;
 	color: $colorWhite;
 	position: relative;
 	z-index: 1000;
+
+	&__prospects_title {
+		margin-top: 1%;
+	}
+
+	&__content {
+		margin-top: 1%;
+	}
 }
