Fix patch to image from scss

--- a/src/sass/sections/home/calculation_order/_calculation_order.scss
+++ b/src/sass/sections/home/calculation_order/_calculation_order.scss
@@ -51,7 +51,7 @@
 						border-color: $colorWhite;
 					}
 					&:checked[type='checkbox'] {
-						background-image: url('../../../../img/calculation_order/check-vector.png');
+						background-image: url('img/calculation_order/check-vector.png');
 					}
 				}
 			}
