--- a/src/sass/elements/_section-title.scss
+++ b/src/sass/elements/_section-title.scss
@@ -6,6 +6,10 @@
 		position: relative;
 		font-size: 2.2rem;
 		text-transform: uppercase;
+		@include Max_one(991px) {
+			font-size: 24px;
+		}
+
 		&::after {
 			content: '';
 			position: absolute;
