--- a/src/sass/sections/home/index.scss
+++ b/src/sass/sections/home/index.scss
@@ -7,4 +7,5 @@
 	// sections home mobile
 	@import 'sections/home/slider/_slider-phone.scss';
 	@import 'sections/home/calculation_order/calculation_order-phone';
+	@import 'sections/home/prospects/_prospects_phone';
 }
