--- a/src/sass/sections/home/prospects/_prospects.scss
+++ b/src/sass/sections/home/prospects/_prospects.scss
@@ -3,10 +3,14 @@
 	width: 95%;
 	margin: 4.5% auto 0px;
 	border-radius: 18px;
-	padding: 3% 16% 3% 18%;
+	padding: 2.5% 15% 1% 16%;
 	color: $colorWhite;
 	position: relative;
 	z-index: 1000;
+	@include Media_width(1250px, 991px) {
+		padding: 3% 10% 3% 12%;
+		width: 97%;
+	}
 
 	&__prospects_title {
 		margin-top: 1%;
