--- a/src/templates/sections/home/prospects/index.html
+++ b/src/templates/sections/home/prospects/index.html
@@ -1,8 +1,8 @@
 <section class="prospects">
 	@@include('../../../elements/title.html', {className: 'prospects__prospects_title'})
 	<div class="content prospects__content">
-		<div id="carouselExampleCaptions" data-bs-ride="carousel" slider-element="carousel-slide">
-			@@include('./carousel-indicators.html')
+		<div id="carouselProspects" data-bs-ride="carousel" slider-element="carousel-slide">
+			@@include('./carousel-indicators.html', { id: 'carouselProspects' })
 			<div class="mt-3 p-3 row row-cols-1 row-cols-lg-4 g-5" slider-element="carousel-inner">
 				<div class="col" slider-element="carousel-item-active" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/check-document.png', text: 'Таможенное оформление груза'})
@@ -30,11 +30,11 @@
 				</div>
 			</div>
 
-			<button style="opacity: 0" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+			<button style="opacity: 0" class="carousel-control-prev" type="button" data-bs-target="#carouselProspects" data-bs-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 				<span class="visually-hidden">Previous</span>
 			</button>
-			<button style="opacity: 0" class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+			<button style="opacity: 0" class="carousel-control-next" type="button" data-bs-target="#carouselProspects" data-bs-slide="next">
 				<span class="carousel-control-next-icon" aria-hidden="true"></span>
 				<span class="visually-hidden">Next</span>
 			</button>
