--- a/src/templates/sections/home/calculation_order/index.html
+++ b/src/templates/sections/home/calculation_order/index.html
@@ -4,7 +4,7 @@
 			<div class="col-lg-7 col-md-12 col-sm-12">
 				<div class="d-lg-block d-md-flex d-sm-flex flex-column justify-content-center">
 					<div class="calculation-order__title">
-						<h1 class="text-uppercase">Получить рассчет стоимости доставки вашего груза</h1>
+						<h2 class="text-uppercase">Получить рассчет стоимости доставки вашего груза</h2>
 					</div>
 					<div class="calculation-order__form-block">
 						<form class="row g-2 calculation-order__form">
@@ -13,16 +13,16 @@
 								<input type="text" class="form-control form-control-lg" placeholder="Категория товара" id="inputEmail4" />
 							</div>
 							<div class="col-lg-6 pe-2 ps-2">
-								<label for="inputPassword4" class="form-label col-form-label-sm">Стоимость груза:</label>
-								<input type="text" class="form-control form-control-lg" placeholder="Введите стоимость" id="inputPassword4" />
+								<label for="inputPassword1" class="form-label col-form-label-sm">Стоимость груза:</label>
+								<input type="text" class="form-control form-control-lg" placeholder="Введите стоимость" id="inputPassword1" />
 							</div>
 							<div class="col-lg-6 pe-2 ps-2">
-								<label for="inputPassword4" class="form-label col-form-label-sm">Вес груза (кг):</label>
-								<input type="text" class="form-control form-control-lg" placeholder="Введите вес" id="inputPassword4" />
+								<label for="inputPassword2" class="form-label col-form-label-sm">Вес груза (кг):</label>
+								<input type="text" class="form-control form-control-lg" placeholder="Введите вес" id="inputPassword2" />
 							</div>
 							<div class="col-lg-6 pe-2 ps-2">
-								<label for="inputPassword4" class="form-label col-form-label-sm">Объем груза (м3):</label>
-								<input type="text" class="form-control form-control-lg" placeholder="Введите объем" id="inputPassword4" />
+								<label for="inputPassword3" class="form-label col-form-label-sm">Объем груза (м3):</label>
+								<input type="text" class="form-control form-control-lg" placeholder="Введите объем" id="inputPassword3" />
 							</div>
 							<div class="col-lg-6 pt-2 pe-2 ps-2 mt-lg-4">
 								<div class="form-check">
@@ -40,8 +40,8 @@
 							</div>
 							<div class="col-md-12 pe-2 ps-2">
 								<div class="form-drag-and-drop-file">
-									<label for="inputPassword4" class="form-label col-form-label-sm">фотография.jpeg</label>
-									<input type="file" hidden id="drag-area-input" />
+									<label for="inputPassword5" class="form-label col-form-label-sm">фотография.jpeg</label>
+									<input type="file" hidden id="drag-area-input" id="inputPassword5" />
 									<div class="drag-and-drop-file" id="drag-area">
 										<span id="drag-area-header">Загрузить фото товара</span>
 									</div>
@@ -51,7 +51,7 @@
 								<div class="d-lg-block d-md-flex d-sm-flex justify-content-center">
 									<button type="submit" class="btn btn-warning orang-buton-with-vector calculation-order__form-btn-submit">
 										<span>Следующий шаг</span>
-										<img src="img/slider/vector-right.svg" />
+										<img src="img/slider/vector-right.svg" alt="" />
 									</button>
 								</div>
 							</div>
@@ -61,7 +61,7 @@
 			</div>
 			<div class="col-5 d-none d-lg-block">
 				<div class="calculation-order__image-block">
-					<img src="img/calculation_order/medium-shot-man-holding-clipboard_1-removebg 1.png" class="calculation-order__image" alt="" />
+					<img src="img/calculation_order/medium-shot-man.png" class="calculation-order__image" alt="" />
 				</div>
 			</div>
 		</div>
