--- a/src/templates/sections/home/slider/index.html
+++ b/src/templates/sections/home/slider/index.html
@@ -12,12 +12,12 @@
 				<img src="img/slider/slider1.png" class="img-fluid slider__img" alt="" />
 				<div class="carousel-caption slider__carousel-caption">
 					<div class="slider__caption_block">
-						<h1>Прямое КАРГО из Китая</h1>
+						<h2>Прямое КАРГО из Китая</h2>
 						<p class="text-break fs-4">Доставляем любые грузы из Китая по честной цене</p>
 						<div class="d-flex justify-content-lg-start justify-content-md-center justify-content-sm-center">
 							<button type="button" class="btn btn-warning carousel__carousel-caption-btn">
 								<span>Рассчитать стоимость</span>
-								<img src="img/slider/vector-right.svg" />
+								<img src="img/slider/vector-right.svg" alt="" />
 							</button>
 						</div>
 					</div>
@@ -27,12 +27,12 @@
 				<img src="img/slider/slider2.png" class="img-fluid slider__img" alt="" />
 				<div class="carousel-caption slider__carousel-caption">
 					<div class="slider__caption_block">
-						<h1>Гарантируем сроки!</h1>
+						<h2>Гарантируем сроки!</h2>
 						<p class="text-break fs-4">Если мы не уложимся в обозначенные сроки, доставка груза со скидкой до 90%</p>
 						<div class="d-flex justify-content-lg-start justify-content-md-center justify-content-sm-center">
 							<button type="button" class="btn btn-warning orang-buton-with-vector carousel__carousel-caption-btn">
 								<span>Рассчитать стоимость</span>
-								<img src="img/slider/vector-right.svg" />
+								<img src="img/slider/vector-right.svg" alt="" />
 							</button>
 						</div>
 					</div>
@@ -42,12 +42,12 @@
 				<img src="img/slider/slider3.png" class="img-fluid slider__img" alt="" />
 				<div class="carousel-caption slider__carousel-caption">
 					<div class="slider__caption_block">
-						<h1>Выкуп товара с ТаоБао, 1688</h1>
+						<h2>Выкуп товара с ТаоБао, 1688</h2>
 						<p class="text-break fs-4">Выкуп и доставка товаров с китайских торговых площадок.</p>
 						<div class="d-flex justify-content-lg-start justify-content-md-center justify-content-sm-center">
 							<button type="button" class="btn btn-warning carousel__carousel-caption-btn">
 								<span>Рассчитать стоимость</span>
-								<img src="img/slider/vector-right.svg" />
+								<img src="img/slider/vector-right.svg" alt="" />
 							</button>
 						</div>
 					</div>
@@ -57,12 +57,12 @@
 				<img src="img/slider/slider4.png" class="img-fluid slider__img" alt="" />
 				<div class="carousel-caption slider__carousel-caption">
 					<div class="slider__caption_block">
-						<h1>Экспресс авто доставка</h1>
+						<h2>Экспресс авто доставка</h2>
 						<p class="text-break fs-4">Доставка автотранспортом из Китая в Россию от 15 дней, от $0,5/кг</p>
 						<div class="d-flex justify-content-lg-start justify-content-md-center justify-content-sm-center">
 							<button type="button" class="btn btn-warning carousel__carousel-caption-btn">
 								<span>Рассчитать стоимость</span>
-								<img src="img/slider/vector-right.svg" />
+								<img src="img/slider/vector-right.svg" alt="" />
 							</button>
 						</div>
 					</div>
