--- a/src/templates/sections/home/calculation_order/index.html
+++ b/src/templates/sections/home/calculation_order/index.html
@@ -40,8 +40,8 @@
 							</div>
 							<div class="col-md-12 pe-2 ps-2">
 								<div class="form-drag-and-drop-file">
-									<label for="inputPassword5" class="form-label col-form-label-sm">фотография.jpeg</label>
-									<input type="file" hidden id="drag-area-input" id="inputPassword5" />
+									<label for="drag-area-input" class="form-label col-form-label-sm">фотография.jpeg</label>
+									<input type="file" hidden id="drag-area-input" />
 									<div class="drag-and-drop-file" id="drag-area">
 										<span id="drag-area-header">Загрузить фото товара</span>
 									</div>
