--- a/src/templates/sections/home/prospects/carousel-indicators.html
+++ b/src/templates/sections/home/prospects/carousel-indicators.html
@@ -1,4 +1,4 @@
-<div class="d-none carousel-indicators element_carousel-indicators prospects__carousel-indicators" slider-element="carousel-indicators">
+<div class="d-none carousel-indicators element_carousel-indicators prospects__carousel-indicators" data-slider-element="carousel-indicators">
 	<button type="button" data-bs-target="#@@id" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 	<button type="button" data-bs-target="#@@id" data-bs-slide-to="1" aria-label="Slide 2"></button>
 	<button type="button" data-bs-target="#@@id" data-bs-slide-to="2" aria-label="Slide 3"></button>
