--- a/src/templates/sections/home/prospects/index.html
+++ b/src/templates/sections/home/prospects/index.html
@@ -1,31 +1,31 @@
 <section class="prospects">
 	@@include('../../../elements/title.html', {className: 'prospects__prospects_title'})
 	<div class="content prospects__content">
-		<div id="carouselProspects" data-bs-ride="carousel" slider-element="carousel-slide">
+		<div id="carouselProspects" data-bs-ride="carousel" data-slider-element="carousel-slide">
 			@@include('./carousel-indicators.html', { id: 'carouselProspects' })
-			<div class="mt-3 p-3 row row-cols-1 row-cols-lg-4 g-5" slider-element="carousel-inner">
-				<div class="col" slider-element="carousel-item-active" data-bs-interval="3000">
+			<div class="mt-3 p-3 row row-cols-1 row-cols-lg-4 g-5" data-slider-element="carousel-inner">
+				<div class="col" data-slider-element="carousel-item-active" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/check-document.png', text: 'Таможенное оформление груза'})
 				</div>
-				<div class="col" slider-element="carousel-item" data-bs-interval="3000">
+				<div class="col" data-slider-element="carousel-item" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/check-mark.png', text: 'Страховка груза'})
 				</div>
-				<div class="col" slider-element="carousel-item" data-bs-interval="3000">
+				<div class="col" data-slider-element="carousel-item" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/magnifying-glass.png', text: 'Проверка товара на брак'})
 				</div>
-				<div class="col" slider-element="carousel-item" data-bs-interval="3000">
+				<div class="col" data-slider-element="carousel-item" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/delivery-truck.png', text: 'Доставка в любой город UA'})
 				</div>
-				<div class="col" slider-element="carousel-item" data-bs-interval="3000">
+				<div class="col" data-slider-element="carousel-item" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/speech-bubble.png', text: 'Консолидация на складе'})
 				</div>
-				<div class="col" slider-element="carousel-item" data-bs-interval="3000">
+				<div class="col" data-slider-element="carousel-item" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/like.png', text: 'Ответственное хранение груза'})
 				</div>
-				<div class="col" slider-element="carousel-item" data-bs-interval="3000">
+				<div class="col" data-slider-element="carousel-item" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/credit-card.png', text: 'Помощь в оплате товара'})
 				</div>
-				<div class="col" slider-element="carousel-item" data-bs-interval="3000">
+				<div class="col" data-slider-element="carousel-item" data-bs-interval="3000">
 					@@include('./prospect-card.html', { url: 'img/prospects/stack.png', text: 'Упаковка, переупаковка, паллетирование груза к международной перевозке' })
 				</div>
 			</div>
