--- a/src/templates/layout/head.html
+++ b/src/templates/layout/head.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8" />
 <meta name="author" content="" />
+<meta name="viewport" content="width=device-width" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
