--- a/src/templates/sections/home/calculation_order/index.html
+++ b/src/templates/sections/home/calculation_order/index.html
@@ -51,7 +51,7 @@
 								<div class="d-lg-block d-md-flex d-sm-flex justify-content-center">
 									<button type="submit" class="btn btn-warning orang-buton-with-vector calculation-order__form-btn-submit">
 										<span>Следующий шаг</span>
-										<img src="img/slider/vector-right.svg" alt="" />
+										<img src="img/slider/vector-right.svg" width="27" height="27" alt="" />
 									</button>
 								</div>
 							</div>
