--- a/src/templates/sections/home/slider/index.html
+++ b/src/templates/sections/home/slider/index.html
@@ -17,7 +17,7 @@
 						<div class="d-flex justify-content-lg-start justify-content-md-center justify-content-sm-center">
 							<button type="button" class="btn btn-warning carousel__carousel-caption-btn">
 								<span>Рассчитать стоимость</span>
-								<img src="img/slider/vector-right.svg" alt="" />
+								<img src="img/slider/vector-right.svg" width="27" height="27" alt="" />
 							</button>
 						</div>
 					</div>
@@ -32,7 +32,7 @@
 						<div class="d-flex justify-content-lg-start justify-content-md-center justify-content-sm-center">
 							<button type="button" class="btn btn-warning orang-buton-with-vector carousel__carousel-caption-btn">
 								<span>Рассчитать стоимость</span>
-								<img src="img/slider/vector-right.svg" alt="" />
+								<img src="img/slider/vector-right.svg" width="27" height="27" alt="" />
 							</button>
 						</div>
 					</div>
@@ -47,7 +47,7 @@
 						<div class="d-flex justify-content-lg-start justify-content-md-center justify-content-sm-center">
 							<button type="button" class="btn btn-warning carousel__carousel-caption-btn">
 								<span>Рассчитать стоимость</span>
-								<img src="img/slider/vector-right.svg" alt="" />
+								<img src="img/slider/vector-right.svg" width="27" height="27" alt="" />
 							</button>
 						</div>
 					</div>
@@ -62,7 +62,7 @@
 						<div class="d-flex justify-content-lg-start justify-content-md-center justify-content-sm-center">
 							<button type="button" class="btn btn-warning carousel__carousel-caption-btn">
 								<span>Рассчитать стоимость</span>
-								<img src="img/slider/vector-right.svg" alt="" />
+								<img src="img/slider/vector-right.svg" width="27" height="27" alt="" />
 							</button>
 						</div>
 					</div>
