--- a/css/style.css
+++ b/css/style.css
@@ -7148,6 +7148,14 @@ body {
   margin-right: auto;
 }
 
+.carousel-control-prev-icon {
+  background-image: url("/../img/slider-vector-left.svg");
+}
+
+.carousel-control-next-icon {
+  background-image: url("/../img/slider-vector-right.svg");
+}
+
 @font-face {
   font-family: Museo100;
   src: url("/../fonts/MuseoSansCyrl-100.woff2") format("woff2"), url("/../fonts/MuseoSansCyrl-100.woff") format("woff"), url("/../fonts/MuseoSansCyrl-100.ttf") format("truetype");
