Add new sections

--- a/src/sass/sections/home/_index.scss
+++ b/src/sass/sections/home/_index.scss
@@ -3,6 +3,7 @@
 	@import 'sections/home/slider/_slider.scss';
 	@import 'sections/home/calculation_order/_calculation_order';
 	@import 'sections/home/prospects/_prospects';
+	@import 'sections/home/delivery_options/_delivery_options';
 
 	// sections home mobile
 	@import 'sections/home/slider/_slider-phone.scss';
