--- a/src/templates/layout/head.html
+++ b/src/templates/layout/head.html
@@ -9,5 +9,6 @@
 
 <link rel="shortcut icon" href="img/favicon.png" />
 
+<link rel="stylesheet" href="css/library.min.css" />
 <link rel="stylesheet" href="css/style.min.css" />
 <title>Frontend-gulp</title>
