--- a/src/templates/sections/home/delivery_options/index.html
+++ b/src/templates/sections/home/delivery_options/index.html
@@ -1,1 +1,1 @@
-<section class="delivery_options">tesst</section>
+<section class="delivery_options">@@include('../../../elements/title.html')</section>
