--- a/src/templates/sections/home/delivery_options/index.html
+++ b/src/templates/sections/home/delivery_options/index.html
@@ -1,1 +1,1 @@
-<section class="delivery_options">@@include('../../../elements/title.html')</section>
+<section class="delivery-options">@@include('../../../elements/title.html', {className: 'delivery-options__title'})</section>
