--- a/src/templates/sections/home/delivery_options/index.html
+++ b/src/templates/sections/home/delivery_options/index.html
@@ -1,1 +1,4 @@
-<section class="delivery-options">@@include('../../../elements/title.html', {className: 'delivery-options__title'})</section>
+<section class="delivery-options">
+	@@include('../../../elements/title.html', {className: 'delivery-options__title', text: 'Варіанти доставки груза з китая'})
+	<div class="container mt-1"></div>
+</section>
