--- a/src/templates/sections/home/prospects/index.html
+++ b/src/templates/sections/home/prospects/index.html
@@ -1,5 +1,5 @@
 <section class="prospects">
-	@@include('../../../elements/title.html', {className: 'prospects__prospects_title'})
+	@@include('../../../elements/title.html', {className: 'prospects__prospects_title', text: 'Почему стоит выбрать именно нас?'})
 	<div class="content prospects__content">
 		<div id="carouselProspects" data-bs-ride="carousel" data-slider-element="carousel-slide">
 			@@include('./carousel-indicators.html', { id: 'carouselProspects' })
