Add slider card

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -38,6 +38,7 @@ body {
 @import 'elements/_rectangle';
 @import 'elements/_custom-indicators';
 @import 'elements/_prospect-card';
+@import 'elements/_slider-card';
 
 // layout
 @import 'layout/_header';
