--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,35 @@ body {
   font-size: 16px;
 }
 
+.slider-cards-element .carousel-inner .carousel-item.active,
+.slider-cards-element .carousel-inner .carousel-item-next,
+.slider-cards-element .carousel-inner .carousel-item-prev {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.slider-cards-element .carousel-inner .carousel-item-end.active,
+.slider-cards-element .carousel-inner .carousel-item-next {
+  -webkit-transform: translateX(25%);
+  -ms-transform: translateX(25%);
+  transform: translateX(25%);
+}
+
+.slider-cards-element .carousel-inner .carousel-item-start.active,
+.slider-cards-element .carousel-inner .carousel-item-prev {
+  -webkit-transform: translateX(-25%);
+  -ms-transform: translateX(-25%);
+  transform: translateX(-25%);
+}
+
+.slider-cards-element .carousel-inner .carousel-item-end,
+.slider-cards-element .carousel-inner .carousel-item-start {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+}
+
 .header .header__navbar {
   height: 100px;
 }
@@ -714,6 +743,16 @@ main {
 @media screen and (max-width: 991px) and (max-width: 500px) {
   .main-home-page .calculation-order .calculation-order__title h2::after {
     left: 40%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .slider-cards-element .carousel-inner .carousel-item > div {
+    display: none;
+  }
+
+  .slider-cards-element .carousel-inner .carousel-item > div:first-child {
+    display: block;
   }
 }
 /*# sourceMappingURL=style.css.map */
