--- a/css/style.css
+++ b/css/style.css
@@ -20,40 +20,40 @@ body {
 }
 
 .carousel-control-prev-icon {
-  background-image: url("/../img/slider-vector-left.svg");
+  background-image: url("../img/slider-vector-left.svg");
 }
 
 .carousel-control-next-icon {
-  background-image: url("/../img/slider-vector-right.svg");
+  background-image: url("../img/slider-vector-right.svg");
 }
 
 @font-face {
   font-family: Museo100;
-  src: url("/../fonts/MuseoSansCyrl-100.woff2") format("woff2"), url("/../fonts/MuseoSansCyrl-100.woff") format("woff"), url("/../fonts/MuseoSansCyrl-100.ttf") format("truetype");
+  src: url(../fonts/MuseoSansCyrl-100.woff2) format("woff2"), url(../fonts/MuseoSansCyrl-100.woff) format("woff"), url(../fonts/MuseoSansCyrl-100.ttf) format("truetype");
   font-style: normal;
 }
 
 @font-face {
   font-family: Museo300;
-  src: url("/../fonts/MuseoSansCyrl-300.woff2") format("woff2"), url("/../fonts/MuseoSansCyrl-300.woff") format("woff"), url("/../fonts/MuseoSansCyrl-300.ttf") format("truetype");
+  src: url(../fonts/MuseoSansCyrl-300.woff2) format("woff2"), url("../fonts/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSansCyrl-300.ttf") format("truetype");
   font-style: normal;
 }
 
 @font-face {
   font-family: Museo500;
-  src: url("/../fonts/MuseoSansCyrl-500.woff2") format("woff2"), url("/../fonts/MuseoSansCyrl-500.woff") format("woff"), url("/../fonts/MuseoSansCyrl-500.ttf") format("truetype");
+  src: url(../fonts/MuseoSansCyrl-500.woff2) format("woff2"), url("../fonts/MuseoSansCyrl-500.woff") format("woff"), url("../fonts/MuseoSansCyrl-500.ttf") format("truetype");
   font-style: normal;
 }
 
 @font-face {
   font-family: Museo700;
-  src: url("/../fonts/MuseoSansCyrl-700.woff2") format("woff2"), url("/../fonts/MuseoSansCyrl-700.woff") format("woff"), url("/../fonts/MuseoSansCyrl-700.ttf") format("truetype");
+  src: url("../fonts/MuseoSansCyrl-700.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-700.woff") format("woff"), url("../fonts/MuseoSansCyrl-700.ttf") format("truetype");
   font-style: normal;
 }
 
 @font-face {
   font-family: Museo900;
-  src: url("/../fonts/MuseoSansCyrl-900.woff2") format("woff2"), url("/../fonts/MuseoSansCyrl-900.woff") format("woff"), url("/../fonts/MuseoSansCyrl-900.ttf") format("truetype");
+  src: url("../fonts/MuseoSansCyrl-900.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-900.woff") format("woff"), url("../fonts/MuseoSansCyrl-900.ttf") format("truetype");
   font-style: normal;
 }
 
@@ -68,11 +68,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   font-size: 1rem;
 }
 
@@ -140,14 +140,14 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-left: 4%;
 }
 
@@ -160,11 +160,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .prospect-card .prospects__prospect-card_img .image__prospect-card {
@@ -177,11 +177,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .prospect-card .prospects__prospect-card_img .image__prospect-card img {
@@ -214,22 +214,22 @@ body {
 .slider-cards-element .carousel-inner .carousel-item-end.active,
 .slider-cards-element .carousel-inner .carousel-item-next {
   -webkit-transform: translateX(25%);
-  -ms-transform: translateX(25%);
-  transform: translateX(25%);
+      -ms-transform: translateX(25%);
+          transform: translateX(25%);
 }
 
 .slider-cards-element .carousel-inner .carousel-item-start.active,
 .slider-cards-element .carousel-inner .carousel-item-prev {
   -webkit-transform: translateX(-25%);
-  -ms-transform: translateX(-25%);
-  transform: translateX(-25%);
+      -ms-transform: translateX(-25%);
+          transform: translateX(-25%);
 }
 
 .slider-cards-element .carousel-inner .carousel-item-end,
 .slider-cards-element .carousel-inner .carousel-item-start {
   -webkit-transform: translateX(0);
-  -ms-transform: translateX(0);
-  transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .slider-cards-element .carousel-control-prev {
@@ -258,7 +258,7 @@ body {
 .header .header__navbar_button:focus {
   border: none;
   -webkit-box-shadow: none;
-  box-shadow: none;
+          box-shadow: none;
 }
 
 .header .header__navbar-collapse {
@@ -320,8 +320,8 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main-home-page .slider .slider__carousel-caption .slider__caption_block {
@@ -355,11 +355,11 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .main-home-page .slider .slider__carousel-caption .slider__caption_block .carousel__carousel-caption-btn span {
@@ -479,19 +479,18 @@ main {
 }
 
 .no-webp .main-home-page .calculation-order .calculation-order__form-block .calculation-order__form .form-check .form-check-input:checked[type=checkbox] {
-  background-image: url("/../img/calculation_order/check-vector.png");
-}
+  background-image: url("../img/calculation_order/check-vector.png"); }
 
 .main-home-page .calculation-order .calculation-order__form-block .calculation-order__form .form-drag-and-drop-file .drag-and-drop-file {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 100%;
   border: 1px #6c7188 dashed;
   height: 40px;
@@ -550,9 +549,7 @@ main {
   border-bottom: 2px solid #89c249;
 }
 
-.webp .main-home-page .calculation-order .calculation-order__form-block .calculation-order__form .form-check .form-check-input:checked[type=checkbox] {
-  background-image: url("/../img/calculation_order/check-vector.webp");
-}
+.webp .main-home-page .calculation-order .calculation-order__form-block .calculation-order__form .form-check .form-check-input:checked[type=checkbox] { background-image: url(../img/calculation_order/check-vector.webp); }
 
 @media screen and (max-width: 1250px) and (min-width: 991px) {
   .main-home-page .prospects {
@@ -594,8 +591,8 @@ main {
     height: 77px;
     padding: 0;
     -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 
   .header .navbar-brand .header_logo {
@@ -648,8 +645,8 @@ main {
     top: 50%;
     left: 60%;
     -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     text-align: center;
   }
 
@@ -688,8 +685,8 @@ main {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     position: relative;
     margin-top: 0;
