--- a/src/sass/elements/_slider-card.scss
+++ b/src/sass/elements/_slider-card.scss
@@ -16,12 +16,12 @@
 
 	.carousel-inner .carousel-item-end.active,
 	.carousel-inner .carousel-item-next {
-		transform: translateX(25%);
+		transform: translateX(33%);
 	}
 
 	.carousel-inner .carousel-item-start.active,
 	.carousel-inner .carousel-item-prev {
-		transform: translateX(-25%);
+		transform: translateX(-33%);
 	}
 
 	.carousel-inner .carousel-item-end,
@@ -39,12 +39,9 @@
 		right: auto;
 	}
 
-	// .card {
-	// 	margin-left: 5%;
-	// 	background-color: $colorTransparent;
-	// 	margin-right: 5%;
-	// 	img {
-	// 		width: 30%;
-	// 	}
-	// }
+	.card {
+		margin-left: 5%;
+		background-color: $colorTransparent;
+		margin-right: 10%;
+	}
 }
