--- a/src/templates/sections/home/delivery_options/index.html
+++ b/src/templates/sections/home/delivery_options/index.html
@@ -1,4 +1,4 @@
 <section class="delivery-options">
 	@@include('../../../elements/title.html', {className: 'delivery-options__title', text: 'Варіанти доставки груза з китая'})
-	<div class="container mt-5">@@include('../../../elements/slider-card.html')</div>
+	<div class="container mt-5">@@include('./slider-card.html')</div>
 </section>
