--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,7 @@
 $colorBlack: #282b38;
 $colorWhite: #ffffff;
 $colorGray: #363a4d;
+$colorGrayBlck: #a3a3a3;
 $colorLightGray: #6c7188;
 $colorGreen: #89c249;
 $colorOrange: #e58d35;
