--- a/css/style.css
+++ b/css/style.css
@@ -115,9 +115,9 @@ body {
   content: "";
   position: absolute;
   border-bottom: 2px solid #e58d35;
-  width: 8%;
+  width: 20%;
   bottom: -20px;
-  left: 45%;
+  left: 35%;
   right: 45%;
   margin: auto;
 }
@@ -713,9 +713,34 @@ main {
     height: 66px;
   }
 
+  .main-home-page .delivery-options {
+    margin-top: 17%;
+  }
+
+  .main-home-page .delivery-options__title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .main-home-page .delivery-options__title h2 {
+    width: 80%;
+  }
+
+  .main-home-page .delivery-options__title h2::after {
+    width: 20%;
+    left: 35%;
+    border-bottom: 2px solid #89c249;
+  }
+
   .main-home-page .delivery-options .delivery_options__carousel-indicators {
     display: block;
-    bottom: -20%;
+    bottom: -16%;
   }
 
   .main-home-page .slider {
