Add services section

--- a/src/sass/sections/home/_index.scss
+++ b/src/sass/sections/home/_index.scss
@@ -4,6 +4,7 @@
 	@import 'sections/home/calculation_order/_calculation_order';
 	@import 'sections/home/prospects/_prospects';
 	@import 'sections/home/delivery_options/_delivery_options';
+	@import 'sections/home/our_services/_our_services';
 
 	// sections home mobile
 	@import 'sections/home/slider/_slider-phone.scss';
