--- a/src/templates/sections/home/delivery_options/slider-card.html
+++ b/src/templates/sections/home/delivery_options/slider-card.html
@@ -1,6 +1,6 @@
 <div class="text-center my-3 slider-cards-element">
 	<div class="row mx-auto my-auto justify-content-center">
-		<div id="recipeCarousel" class="carousel slide">
+		<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
 			@@include('./carousel-indicators.html', {id: 'recipeCarousel'})
 			<div class="carousel-inner" role="listbox">
 				<div class="carousel-item active">
