--- a/src/sass/elements/_section-title.scss
+++ b/src/sass/elements/_section-title.scss
@@ -14,11 +14,15 @@
 			content: '';
 			position: absolute;
 			border-bottom: 2px solid #e58d35;
-			width: 20%;
+			width: 8%;
 			bottom: -20px;
-			left: 35%;
+			left: 45%;
 			right: 45%;
 			margin: auto;
+			@include Max_one(991px) {
+				left: 35%;
+				width: 20%;
+			}
 		}
 	}
 }
