--- a/css/style.css
+++ b/css/style.css
@@ -115,9 +115,9 @@ body {
   content: "";
   position: absolute;
   border-bottom: 2px solid #e58d35;
-  width: 20%;
+  width: 8%;
   bottom: -20px;
-  left: 35%;
+  left: 45%;
   right: 45%;
   margin: auto;
 }
@@ -562,7 +562,7 @@ main {
 
 .main-home-page .delivery-options {
   color: #ffffff;
-  margin-bottom: 30%;
+  margin-bottom: 5%;
 }
 
 .main-home-page .delivery-options__title {
@@ -593,6 +593,17 @@ main {
 
 .main-home-page .delivery-options .delivery_options__carousel-indicators {
   display: none;
+}
+
+.main-home-page .our_services {
+  color: #ffffff;
+  background-color: #363a4d;
+  border-radius: 20px;
+  width: 95%;
+  margin: 1% auto 30%;
+  padding-top: 6%;
+  padding-bottom: 5%;
+  height: 790px;
 }
 
 .webp .main-home-page .calculation-order .calculation-order__form-block .calculation-order__form .form-check .form-check-input:checked[type=checkbox] { background-image: url(../img/calculation_order/check-vector.webp); }
@@ -642,6 +653,11 @@ main {
 @media screen and (max-width: 991px) {
   .section-title h2 {
     font-size: 24px;
+  }
+
+  .section-title h2::after {
+    left: 35%;
+    width: 20%;
   }
 
   .element_carousel-indicators button {
@@ -741,6 +757,11 @@ main {
   .main-home-page .delivery-options .delivery_options__carousel-indicators {
     display: block;
     bottom: -16%;
+  }
+
+  .main-home-page .our_services {
+    height: 100%;
+    margin-top: 30%;
   }
 
   .main-home-page .slider {
