--- a/src/templates/sections/home/delivery_options/slider-card.html
+++ b/src/templates/sections/home/delivery_options/slider-card.html
@@ -1,4 +1,4 @@
-<div class="text-center my-3 slider-cards-element">
+<div class="text-center my-3 slider-cards-element" id="delivery_options_slider_cards">
 	<div class="row mx-auto my-auto justify-content-center">
 		<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
 			@@include('./carousel-indicators.html', {id: 'recipeCarousel'})
