--- a/src/templates/sections/home/our_services/slider-card.html
+++ b/src/templates/sections/home/our_services/slider-card.html
@@ -1,22 +1,25 @@
-<div class="text-center my-3 slider-cards-element" id="slider-cards_our_services">
+<div class="text-center my-3 slider-cards-element" id="our_services_slider_cards">
 	<div class="row mx-auto my-auto justify-content-center">
 		<div id="recipeCarousel1" class="carousel slide">
 			@@include('./carousel-indicators.html', {id: 'recipeCarousel1'})
 			<div class="carousel-inner" role="listbox">
 				<div class="carousel-item active">
-					<div class="col-lg-4 col-md-12">@@include('./our_services_card.html', { Img: 'img/delivery_options/Rectangle.png', Title: 'Авто - обычная' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
 				</div>
 				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./our_services_card.html', { Img: 'img/delivery_options/Rectangle.png', Title: 'Море' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
 				</div>
 				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./our_services_card.html', { Img: 'img/delivery_options/Rectangle.png', Title: 'Ж/д' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
 				</div>
 				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./our_services_card.html', { Img: 'img/delivery_options/Rectangle.png', Title: 'Авиа' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
 				</div>
 				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./our_services_card.html', { Img: 'img/delivery_options/Rectangle.png', Title: 'Авто - ускоренная' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
+				</div>
+				<div class="carousel-item">
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
 				</div>
 			</div>
 			<a class="carousel-control-prev w-aut" href="#recipeCarousel1" role="button" data-bs-slide="prev">
