--- a/src/templates/sections/home/delivery_options/card.html
+++ b/src/templates/sections/home/delivery_options/card.html
@@ -1,5 +1,5 @@
 <div class="card">
-	<img src="@@Img" width="100%" height="100%" class="card-img-top" alt="Щось пішло не так зображення не знайдено" />
+	<img src="@@Img" width="360" height="229" class="card-img-top" alt="Щось пішло не так зображення не знайдено" />
 	<div class="card-body">
 		<h5 class="fw-semibold fs-5 mt-2 card-title">@@Title</h5>
 		<div class="d-flex justify-content-center w-100 mt-3">
