--- a/src/templates/sections/home/our_services/slider-card.html
+++ b/src/templates/sections/home/our_services/slider-card.html
@@ -1,25 +1,19 @@
-<div class="text-center my-3 slider-cards-element" id="our_services_slider_cards">
+<div class="text-center slider-cards-element" id="our_services_slider_cards">
 	<div class="row mx-auto my-auto justify-content-center">
-		<div id="recipeCarousel1" class="carousel slide">
+		<div id="recipeCarousel1" class="carousel slide" data-bs-ride="carousel">
 			@@include('./carousel-indicators.html', {id: 'recipeCarousel1'})
 			<div class="carousel-inner" role="listbox">
 				<div class="carousel-item active">
-					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/our_services/Rectangle1.png', Title: 'Авто - обычная' })</div>
 				</div>
 				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/our_services/Rectangle2.png', Title: 'Авто - обычная' })</div>
 				</div>
 				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/our_services/Rectangle3.png', Title: 'Авто - обычная' })</div>
 				</div>
 				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
-				</div>
-				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
-				</div>
-				<div class="carousel-item">
-					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/start.png', Title: 'Авто - обычная' })</div>
+					<div class="col-lg-4 col-md-12">@@include('./card.html', { Img: 'img/our_services/Rectangle4.png', Title: 'Авто - обычная' })</div>
 				</div>
 			</div>
 			<a class="carousel-control-prev w-aut" href="#recipeCarousel1" role="button" data-bs-slide="prev">
