--- a/src/templates/sections/home/our_services/card.html
+++ b/src/templates/sections/home/our_services/card.html
@@ -1,3 +1,8 @@
 <div class="card">
-	<img src="@@Img" width="360" height="229" alt="test" />
+	<img src="@@Img" width="360" height="482" alt="test" />
+	<div class="card-img-overlay top-50 text-start">
+		<h5 class="card-title">Card title</h5>
+		<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		<button type="button" class="btn text-break btn-outline-warning orang-buton-outline">Подробнее</button>
+	</div>
 </div>
