--- a/src/sass/sections/home/_index.scss
+++ b/src/sass/sections/home/_index.scss
@@ -5,6 +5,8 @@
 	@import 'sections/home/prospects/_prospects';
 	@import 'sections/home/delivery_options/_delivery_options';
 	@import 'sections/home/our_services/_our_services';
+	@import 'sections/home/about_company/about_company';
+	@import 'sections/home/usually_questions/usually_questions';
 
 	// sections home mobile
 	@import 'sections/home/slider/_slider-phone.scss';
