Add section about

--- a/src/templates/sections/home/about_company/index.html
+++ b/src/templates/sections/home/about_company/index.html
@@ -1,1 +1,25 @@
-<section class="about_company">test</section>
+<section class="about_company">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6 col-md-12">
+				<div class="about_company__content-block">
+					@@include('../../../elements/title.html', {className: 'about_company__title', text: 'Про компанію'})
+					<div class="about_company__text-block mt-4">
+						<p class="fw-light lh-lg text-break">
+							Компания Азия Карго - это полный комплекс логистических услуг по доставке грузов из Китая в Россию - сборные грузы и цельные товарные партии, услуги посредника
+							ТаоБао, КАРГО Китай-Россия. Для вашего удобства есть тарифы на лёгкий и тяжелый куб. Мы работаем на рынке более 4 лет, а руководители компании занимаются логистикой
+							уже более 11 лет.
+						</p>
+						<p class="fw-light lh-lg text-break">
+							Мы стремимся предоставить лучшие условия доставки и лучший сервис своим клиентам. Выбирая нас - вы выбираете качественную доставку оптимальную по цене и времени!
+							Убедитесь в этом сами!
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6 col-md-12 align-self-center d-flex justify-content-center">
+				<img src="img/about_company/Bord.png" width="550" height="581" alt="Bord.png not found" />
+			</div>
+		</div>
+	</div>
+</section>
